32_kvs/grade.txt
Grading at Tue Apr 16 02:20:34 UTC 2019
Attempting to compile:
kv.c: In function ‘readKVs’:
kv.c:33:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return EXIT_FAILURE;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
